--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
-    "@testing-library/react": "^16.1.0",
     "antd": "^5.23.1",
     "ky": "^1.7.4",
     "mobx": "^6.13.5",
@@ -24,6 +23,8 @@
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.17.0",
     "@faker-js/faker": "^9.4.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
